--- a/app/src/main/res/layout/quest_listview.xml
+++ b/app/src/main/res/layout/quest_listview.xml
@@ -64,46 +64,84 @@
     </ScrollView>
 
     <Button
+        android:id="@+id/infoBtn4"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="58dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/syringe_ck"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintStart_toEndOf="@+id/hospitalBtn4" />
+
+    <Button
+        android:id="@+id/hospitalBtn4"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="58dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/hospital_ck"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintStart_toEndOf="@+id/homeBtn4" />
+
+    <Button
+        android:id="@+id/questBtn4"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="58dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/chat_ck"
+        app:layout_constraintBottom_toTopOf="@+id/textView11"
+        app:layout_constraintStart_toEndOf="@+id/infoBtn4" />
+
+    <Button
         android:id="@+id/homeBtn4"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="53dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/home_ck"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="63dp"
+        android:layout_marginBottom="8dp"
         android:text="홈"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/hospitalBtn4"
+    <TextView
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="16dp"
-        android:text="병원"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/homeBtn4" />
-
-    <Button
-        android:id="@+id/imfoBtn4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginBottom="8dp"
         android:text="정보"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/hospitalBtn4" />
+        app:layout_constraintStart_toEndOf="@+id/textView5" />
 
-    <Button
-        android:id="@+id/quest4"
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="19dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginBottom="8dp"
+        android:text="자주묻는질문"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView6" />
+
+    <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="16dp"
-        android:text="Q&amp;A"
+        android:layout_marginStart="70dp"
+        android:layout_marginBottom="8dp"
+        android:text="병원"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imfoBtn4" />
+        app:layout_constraintStart_toEndOf="@+id/textView4" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
