--- a/app/src/main/res/layout/quest_listview.xml
+++ b/app/src/main/res/layout/quest_listview.xml
@@ -33,7 +33,7 @@
                 android:layout_marginStart="35dp"
                 android:layout_marginTop="34dp"
                 android:fontFamily="@font/atitlegothic3"
-                android:text="자주하는 질문"
+                android:text="자주묻는 질문"
                 android:textColor="@color/backgroundGray"
                 android:textSize="30dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -52,8 +52,8 @@
 
             <ListView
                 android:id="@+id/listview"
-                android:layout_width="383dp"
-                android:layout_height="627dp"
+                android:layout_width="401dp"
+                android:layout_height="1395dp"
                 android:layout_marginTop="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
