--- a/app/src/main/res/layout/quest_add.xml
+++ b/app/src/main/res/layout/quest_add.xml
@@ -63,8 +63,8 @@
 
             <EditText
                 android:id="@+id/titleAdd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="301dp"
+                android:layout_height="43dp"
                 android:layout_marginStart="28dp"
                 android:layout_marginTop="24dp"
                 android:ems="10"
