--- a/app/src/main/res/layout/quest_detail.xml
+++ b/app/src/main/res/layout/quest_detail.xml
@@ -83,14 +83,14 @@
 
             <TextView
                 android:id="@+id/title_detail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="314dp"
+                android:layout_height="76dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
                 android:fontFamily="@font/atitlegothic2"
                 android:text="제목"
                 android:textColor="#FFFFFF"
-                android:textSize="34sp"
+                android:textSize="27sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/imageView5"
                 app:layout_constraintTop_toTopOf="parent" />
